Fixed table align, added search funtionallity, fixed bugs -REALSE COMMIT-

--- a/style/wimb.css
+++ b/style/wimb.css
@@ -3,7 +3,7 @@ body {
 	padding-left: 0;
 	padding-right: 0;
 	padding-bottom: 0;
-	margin-top: 0;
+	margin-top: 59px;
 	margin-left: 0;
 	margin-right: 0;
 	margin-bottom: 0;
@@ -13,6 +13,9 @@ body {
 	right: 0;
 	background-color: #f4f4f4;
 	font-family: Helvetica;
+	overflow-x: hidden;
+	overflow-y: hidden;
+
 	user-select: none;
 	-webkit-user-select: none;
 	-moz-user-select: none;
@@ -36,8 +39,10 @@ input {
 	background: linear-gradient(#058182, #2a3a52);
 	background-image: -webkit-linear-gradient(top, #058182, #2a3a52);
 	height: 48px;
-	position: fixed;
 	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 .logo {
 	background: url('../img/logo.png');
@@ -73,7 +78,7 @@ input {
 	padding-right: 0;
 	margin-left: 0;
 	margin-right: 0;
-	float: left;
+	float: 	left;
 	cursor: pointer;
 }
 .header_search{
@@ -86,33 +91,46 @@ input {
 	background: url('../img/header_refresh.png');
 }
 .container {
-	margin-top: 75px;
 	right: 0;
 	float: right;
 	width: 100%;
-	height: 100px;
-	display: block;
-	max-height: 100px;
+	height: 100%;
+	overflow-x: hidden;
+	overflow-y: hidden;
+
 }
 .station_title {
-	margin-top: 0px;
-	margin-bottom: 10px;
-	margin-right: 5px;
+	margin-top: 10px;
+	margin-right: 15px;
 	direction: rtl;
 	font-size: 16px;
 
 }
-.stations {
-	width: 96%;
-	height: 30px;
+.stations_container
+{
+	position: absolute;
+	bottom: 10px;
+	top: auto;
 	background-color: #FFFFFF;
-	text-align: right;
+	
 	border-style: solid;
 	border-width: 3px;
 	border-color: #b5b5b5;
-	margin: auto;
-	overflow-y: scroll;
 	
+	margin: 0 auto;
+  	left: 0;
+  	right: 0;
+	width: 90%;
+
+	overflow-y: scroll;
+	overflow-x: hidden;
+	
+
+}
+.stations {
+	width: 100%;
+	background-color: #FFFFFF;
+	text-align: right;
 }
 tr td{
 	border-bottom-style: solid;
@@ -123,7 +141,9 @@ tr td{
 	cursor: pointer;
 	background-color: #FFFFFF;
 	width: 100%;
+	height: 30px;
 }
+
 .station_name {
 	font-size: 17px;
 	font-weight: bold;
@@ -159,9 +179,11 @@ tr td{
 	width: 40px;
 	height: 40px;
 	position: fixed;
-	margin: 50% auto;
-  	left: 0;
-  	right: 0;
+	top: 50%;
+	bottom: 50%;
+  	left: 50%;
+  	right: 50%;
+  	z-index: 99999;
 
 }
 .line_time {
@@ -175,10 +197,9 @@ tr td{
 	font-weight: bold;
 }
 #search_bar {
-	width: 96%;
+	width: 90%;
 	margin: auto;
-
-	margin-bottom: 20px;
+	margin-top: 20px;
 }
 #search_text {
 	float: right;
@@ -210,4 +231,8 @@ tr td{
 }
 #search_button:active {
 	background-color: #e9e4e4;
+}
+.scrollable {
+    -webkit-overflow-scrolling: touch;
+    overflow-y:auto;
 }
